# csharp-cpp-example

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
application-csharp/: CMakeLists.txt
application-csharp/src/: Program.cs
cpp/: CMakeLists.txt
cpp/library-c-api/: CMakeLists.txt
cpp/library-c-api/src/: thingy-c-api.cpp
cpp/library-clr/: CMakeLists.txt
cpp/library-clr/src/: thingy-clr.cpp
cpp/tool/: CMakeLists.txt
cpp/tool/src/: main.cpp
csharp/: CMakeLists.txt  common.props
csharp/application/: CMakeLists.txt  applctn.csproj
csharp/application/etc/: grils.json
csharp/application/src/: Program.cs
csharp/maui/: App.xaml.cs  AppShell.xaml  GlobalXmlns.cs  MainPage.xaml  MainPage.xaml.cs  maui.csproj
csharp/maui/Resources/Raw/: grils.json
csharp/maui/Resources/Styles/: Styles.xaml
library-csharp/src/: Some.cs
